fix tex-align & font-size title

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -4,6 +4,7 @@
   height: 100vh;
   background-image: url(../styles/images/header-bg.png);
   background-size: cover;
+  background-repeat: no-repeat;
   background-position: right;
 
   display: flex;
@@ -11,6 +12,7 @@
   justify-content: space-between;
 
   &__title {
+    text-align: center;
     margin: 0;
     font-style: normal;
     font-weight: 700;
@@ -19,7 +21,7 @@
     letter-spacing: -1.5px;
 
     @include onTablet {
-      font-style: 64px;
+      font-size: 64px;
     }
   }
 
